--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,22 +14,19 @@
 <%= render 'shared/form_errors', obj: @comment %>
 
 <p>
-  <%= form_for [@post, @comment] do |comment_form| %>
-    <div class="control-group">
-      <%= comment_form.label :body, 'Add comment:' %>
-      <%= comment_form.text_area :body %>
-    </div>
-    <%= comment_form.submit class: 'btn btn-primary btn-small' %>
+  <% if logged_in? %>
+    <%= form_for [@post, @comment] do |comment_form| %>
+      <div class="control-group">
+        <%= comment_form.label :body, 'Add comment:' %>
+        <%= comment_form.text_area :body %>
+      </div>
+      <%= comment_form.submit class: 'btn btn-primary btn-small' %>
+    <% end %>
   <% end %>
 
   <h5>Comments:</h5>
 
   <% @post.comments.each do |comment| %>
-    <div class="well span8">
-      <em><%= comment.body %></em>
-      <br/>
-        <span class="quiet">by</span> <%= comment.creator.username %>
-        <small>at <%= format_date(comment.created_at) %></small>
-    </div>
+    <%= render 'comments/comment', comment: comment %>
   <% end %>
 </p>
