--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -11,15 +11,36 @@
     <% Category.all.each do |category|  %>
       <li><%= link_to category.name, category_path(category) %></li>
     <% end %>
-    <li class="divider"></li>
-    <li>
-      <%= link_to new_category_path do %>
-        <i class="icon-plus"></i>
-        New Category
-      <% end %>
-    </li>
+    <% if logged_in? %>
+      <li class="divider"></li>
+      <li>
+        <%= link_to new_category_path do %>
+          <i class="icon-plus"></i>
+          New Category
+        <% end %>
+      </li>
+    <% end %>
   </ul>
 </div>
-<div class="nav_item">
-  <%= link_to 'New Post', new_post_path, class: 'btn btn-success btn-small' %>
-</div>
+<% if logged_in? %>
+  <div class="nav_item">
+    <%= link_to 'New Post', new_post_path, class: 'btn btn-success btn-small' %>
+  </div>
+  <div class="btn-group nav_item">
+    <%= link_to '#', class: 'btn btn-small dropdown-toggle', 'data-toggle' => 'dropdown' do %>
+      <%= current_user.username %> <span class="caret"></span>
+    <% end %>
+    <ul class="dropdown-menu">
+      <li><%= link_to 'Show Profile', user_path(current_user) %></li>
+      <li><%= link_to 'Edit Profile', edit_user_path(current_user) %></li>
+      <li><%= link_to 'Log Out', logout_path %></li>
+    </ul>
+  </div>
+<% else %>
+  <div class="nav_item">
+    <%= link_to 'Register', register_path, class: 'btn btn-success btn-small' %>
+  </div>
+  <div class="nav_item">
+    <%= link_to 'Log in', login_path, class: 'btn btn-success btn-small' %>
+  </div>
+<% end %>
