--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,17 +1,19 @@
 <% show_post ||= false %>
 
 <div class="row">
-  <div class="span0 well text-center">
-    <%= link_to vote_post_comment_path(comment.post, comment, vote: true), method: :post do %>
-      <i class="icon-arrow-up"></i>
+  <% if logged_in? %>
+    <div class="span0 well text-center">
+      <%= link_to vote_post_comment_path(comment.post, comment, vote: true), method: :post do %>
+        <i class="icon-arrow-up"></i>
+      <% end %>
+      <br/>
+      <%= comment.vote_sum %>
+      <br/>
+      <%= link_to vote_post_comment_path(comment.post, comment, vote: false), method: :post do %>
+        <i class="icon-arrow-down"></i>
+      <% end %>
+    </div>
     <% end %>
-    <br/>
-    <%= comment.vote_sum %>
-    <br/>
-    <%= link_to vote_post_comment_path(comment.post, comment, vote: false), method: :post do %>
-      <i class="icon-arrow-down"></i>
-    <% end %>
-  </div>
   <div class="well span8">
     <em><%= comment.body %><% if show_post %> <small>on <%= link_to(comment.post.title, post_path(comment.post)) %><% end %></small></em>
     <br/>
