--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,13 +3,15 @@
 <div class="row">
   <% if logged_in? %>
     <div class="span0 well text-center">
-      <%= link_to vote_post_comment_path(comment.post, comment, vote: true), method: :post do %>
+      <%= link_to vote_post_comment_path(comment.post, comment, vote: true), method: :post, remote: true do %>
         <i class="icon-arrow-up"></i>
       <% end %>
       <br/>
-      <%= comment.vote_sum %>
+      <span id="post-<%= comment.post.id %>-comment-<%= comment.id %>-votes">
+        <%= comment.vote_sum %>
+      </span>
       <br/>
-      <%= link_to vote_post_comment_path(comment.post, comment, vote: false), method: :post do %>
+      <%= link_to vote_post_comment_path(comment.post, comment, vote: false), method: :post, remote: true do %>
         <i class="icon-arrow-down"></i>
       <% end %>
     </div>
