--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,13 +1,15 @@
 <div class="row">
   <% if logged_in? %>
     <div class="span0 well text-center">
-      <%= link_to vote_post_path(post, vote: true), method: :post do %>
+      <%= link_to vote_post_path(post, vote: true), method: :post, remote: true do %>
         <i class="icon-arrow-up"></i>
       <% end %>
       <br/>
-      <%= post.vote_sum %>
+      <span id="post-<%= post.id %>-votes">
+        <%= post.vote_sum %>
+      </span>
       <br/>
-      <%= link_to vote_post_path(post, vote: false), method: :post do %>
+      <%= link_to vote_post_path(post, vote: false), method: :post, remote: true do %>
         <i class="icon-arrow-down"></i>
       <% end %>
     </div>
