Add slugs, fix small issues with ajaxifying voting

--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -7,7 +7,7 @@
         <i class="icon-arrow-up"></i>
       <% end %>
       <br/>
-      <span id="post-<%= comment.post.id %>-comment-<%= comment.id %>-votes">
+      <span id="comment-<%= comment.id %>-votes">
         <%= comment.vote_sum %>
       </span>
       <br/>
