--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -5,7 +5,7 @@
         <i class="icon-arrow-up"></i>
       <% end %>
       <br/>
-      <span id="post-<%= post.id %>-votes">
+      <span id="post-<%= post.slug %>-votes">
         <%= post.vote_sum %>
       </span>
       <br/>
